--- a/static/index.htm
+++ b/static/index.htm
@@ -7,8 +7,8 @@
         
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Jersey+10&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    </head>
+        <link href="https://fonts.googleapis.com/css2?family=Jersey+10&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Tinos:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+</head>
     <style>
         @keyframes typing {
             from { width: 0; }
@@ -21,23 +21,24 @@
         }
         h1 {
             font-size: 70;
-            padding-left: 20;
             padding-top: 20;
             overflow: hidden;
             border-right: .05em solid rgb(0, 0, 0);
             white-space: nowrap;
-            margin: 0 auto;
-            animation: 
-                typing 3.5s steps(40, end)      
+            margin-left: auto;
+            margin-right: auto;
+            text-align: center;
+            animation: typing 3.5s steps(40, end), blink-caret 0.75s step-end infinite;    
         }
         p {
             font-size: 20;
-            padding-left: 20;
-            padding-right: 20;
-            font-family: "Montserrat", sans-serif;
-            font-optical-sizing: auto;
-            font-weight: 300;
+            padding: 20;
+            font-family: "Tinos", serif;
+            font-weight: 400;
             font-style: normal;
+            width: 50%;
+            margin-left: auto;
+            margin-right: auto;
         }
         .labels {
             font-family: "Jersey 10", sans-serif;
@@ -291,5 +292,6 @@
         }
         makeChart1();
     </script>
+    <p></p>
     </body>
 </html>
